--- a/IMS/IMS/bin/IMS.dll.config
+++ b/IMS/IMS/bin/IMS.dll.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-IMS-20170212092627.mdf;Initial Catalog=aspnet-IMS-20170212092627;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-IMS-20170212092627.mdf;Initial Catalog=aspnet-IMS-20170212092627;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="IMSContext" connectionString="metadata=res://*/IMSModel.csdl|res://*/IMSModel.ssdl|res://*/IMSModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=CRLHL-PSDT34\SQL2016;initial catalog=dbIMS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
