--- a/IMS/IMS/Web.config
+++ b/IMS/IMS/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-IMS-20170212092627.mdf;Initial Catalog=aspnet-IMS-20170212092627;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="IMSContext" connectionString="metadata=res://*/IMSModel.csdl|res://*/IMSModel.ssdl|res://*/IMSModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=dbIMS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="IMSContext" connectionString="metadata=res://*/IMSModel.csdl|res://*/IMSModel.ssdl|res://*/IMSModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=CRLHL-PSDT34\SQL2016;initial catalog=dbIMS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
